--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -2,15 +2,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 20px;
 }
 
-.small-para {
+/* used Chaining selectors to specify*/
+
+.para.small-para {
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 900;
 }
 
 .para {
@@ -21,15 +23,22 @@ body {
   background: green;
   color: white;
   font-weight: bold;
+  font-size: 20px;
 } 
 
-.button {
+
+/* changed the class selector name to cancel from button to specify */
+
+.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
-}
+} 
+     
 
-.child {
+/* used descendant combinator */
+
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
